fixed small screen project alignment issue

--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -1,7 +1,8 @@
 .project {
-  width: 400px;
+  max-width: 500px;
   margin: 1rem auto 2rem;
   padding: 1rem;
+  text-align: center;
 }
 
 .project p {
